core/unpackaged/main/default/objects/Quick_Link__mdt/Quick_Link__mdt.object-meta.xml
<CustomObject>
    <label>Quick Link</label>
    <pluralLabel>Quick Links</pluralLabel>
</CustomObject>