core/unpackaged/main/default/objects/Quick_Link__mdt/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <inlineHelpText>Enter values from this site: https://v1.lightningdesignsystem.com/icons/

Utilize the convention of "category:icon_name", so for instance: "utility:arrowdown" for an arrow pointing down.</inlineHelpText>
    <label>Icon</label>
    <length>50</length>
    <type>Text</type>
</CustomField>