core/unpackaged/main/default/objects/Quick_Link__mdt/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <label>URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>